ampliación del diccionario & refactorización